fix scrollbar

--- a/src/pages/Character/ReportView.css
+++ b/src/pages/Character/ReportView.css
@@ -6,8 +6,3 @@ hr {
 ul {
   margin-bottom: 10px;
 }
-
-#ReportViewContainer {
-  max-height: calc(100vh - 170px);
-  overflow-y: scroll;
-}
